--- a/rrethnesh/Rrethnesh.html
+++ b/rrethnesh/Rrethnesh.html
@@ -3,49 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rreth Nesh</title>
     <link rel="stylesheet" href="Rrethnesh.css">
 </head>
+
 <body>
-    
-    <header class="header__home" id="header">
-<a id="logo">
-    <img src="Studentikslogo.jpg" alt="Logo e Studentit ks">
-</a>
-<ul>
-<li>
-<a href="Universitetet/Universitetet.html">
-    <span>
-    Universitetet
-    </span>
-</a>
-</li>
-<li>
-<a href="Lajme/Lajme.html">
-</i> <span>Lajme te reja</span>
-</a>
-</li>
-<li>
-<a href="Bursat/Bursat.html">
-<i class="icon-user"></i> <span>Bursat</span>
-</a>
-    </li>
-	<li>
-<a href="banimi/Banimi.html" >
-    <i class="icon-play-button"></i> <span>Banimi</span>
-   	</a>
-	</li>
-<li>
-    <a href="tetjera/tetjera.html">
-        <span>Te tjera</span>
-    </a>
-</li>
-<li>
-    <a href="rrethnesh/Rrethnesh.html" >
-        <span>Rreth nesh</span>
-    </a>
-</li>
-</ul>
-</header>
+
+<!-- ===== NAVBAR ===== -->
+<nav>
+    <div class="nav-container">
+        <a class="logo" href="#">
+            <img src="https://placehold.co/150x40/2D3139/E5E7EB?text=Studenti+KS" alt="Logo">
+        </a>
+
+        <ul class="nav-links">
+            <li><a href="Universitetet/Universitetet.html">Universitetet</a></li>
+            <li><a href="Lajme/Lajme.html">Lajme te reja</a></li>
+            <li><a href="Bursat/Bursat.html">Bursat</a></li>
+            <li><a href="banimi/Banimi.html">Banimi</a></li>
+            <li><a href="tetjera/tetjera.html">Te tjera</a></li>
+            <li><a href="rrethnesh/Rrethnesh.html">Rreth nesh</a></li>
+        </ul>
+
+        <div class="auth-buttons">
+            <button id="loginBtn">Login</button>
+            <button id="registerBtn">Register</button>
+            <button id="hamburgerBtn" class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+        </div>
+    </div>
+
+    <!-- MOBILE MENU -->
+    <div class="mobile-menu">
+        <ul class="mobile-links">
+            <li><a href="Universitetet/Universitetet.html">Universitetet</a></li>
+            <li><a href="Lajme/Lajme.html">Lajme te reja</a></li>
+            <li><a href="Bursat/Bursat.html">Bursat</a></li>
+            <li><a href="banimi/Banimi.html">Banimi</a></li>
+            <li><a href="tetjera/tetjera.html">Te tjera</a></li>
+            <li><a href="rrethnesh/Rrethnesh.html">Rreth nesh</a></li>
+        </ul>
+        <div class="mobile-auth-buttons">
+            <button id="mobileLogin">Login</button>
+            <button id="mobileRegister">Register</button>
+        </div>
+    </div>
+</nav>
+
+<!-- ===== ABOUT SECTION ===== -->
+<section class="about">
+    <div class="container">
+
+        <h1 class="title">Rreth Nesh</h1>
+
+        <p class="desc">
+            Ne jemi të përkushtuar të krijojmë eksperienca moderne, të shpejta 
+            dhe shumë të lehta për t’u përdorur.  
+            Qëllimi ynë është të ofrojmë dizajn të bukur me kod profesional dhe të pastër.
+        </p>
+
+        <div class="team">
+
+            <div class="card">
+                <img src="img/person1.jpg" alt="Team Member">
+                <h3>Alex Carter</h3>
+                <p>Founder & Developer</p>
+            </div>
+
+            <div class="card">
+                <img src="img/person2.jpg" alt="Team Member">
+                <h3>Sara Williams</h3>
+                <p>Designer</p>
+            </div>
+
+            <div class="card">
+                <img src="img/person3.jpg" alt="Team Member">
+                <h3>Daniel Brooks</h3>
+                <p>Project Manager</p>
+            </div>
+
+        </div>
+
+    </div>
+</section>
+
+<script>
+    // Hamburger menu toggle
+    const hamburger = document.querySelector(".hamburger");
+    const mobileMenu = document.querySelector(".mobile-menu");
+
+    hamburger.addEventListener("click", () => {
+        hamburger.classList.toggle("active");
+        mobileMenu.classList.toggle("active");
+    });
+</script>
+
 </body>
 </html>
