--- a/index.html
+++ b/index.html
@@ -72,22 +72,8 @@
                         <p>Ketu do gjeni info per cdo fakultet ne Kosove</p>
                     </div>
                     <div class="flip-card-back">
-                        <img src="https://images.unsplash.com/photo-1505678261036-a3fcc5e884ee?w=500" alt="">
+                        <img src="College.jpg" alt="">
                         <p>Kliko për më shumë informata</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Card 2 -->
-            <div class="flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <h3>Faqet e fakulteteve</h3>
-                        <p>Ketu do te gjeni webfaqet e te gjitha fakulteteve ne Kosove</p>
-                    </div>
-                    <div class="flip-card-back">
-                        <img src="https://images.unsplash.com/photo-1531058020387-3be344556be6?w=500" alt="">
-                        <p>Agenda javore</p>
                     </div>
                 </div>
             </div>
@@ -97,11 +83,10 @@
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                         <h3>Materialet</h3>
-                        <p>Materialet si PDF, do ti gjeni ketu</p>
                     </div>
                     <div class="flip-card-back">
-                        <img src="https://images.unsplash.com/photo-1496307042754-b4aa456c4a2d?w=500" alt="">
-                        <p>O.......</p>
+                        <img src="Books.avif" alt="">
+                        <p>Materialet si PDF, do ti gjeni ketu</p>
                     </div>
                 </div>
             </div>
@@ -114,13 +99,13 @@
                         <p>Banesa, Konvikte dhe Shtepi</p>
                     </div>
                     <div class="flip-card-back">
-                        <img src="https://images.unsplash.com/photo-1490135900360-2a5a65e3f165?w=500" alt="">
+                        <img src="The-4-Rules-of-Sharing-a-Student-Apartment.jpg" alt="">
                         <p>Gjithçka që duhet të dish</p>
                     </div>
                 </div>
             </div>
 
-            <!-- STUDENT MAP (fixuar) -->
+            <!-- STUDENT MAP -->
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
@@ -128,7 +113,7 @@
                         <p>Lokacionet më të rëndësishme</p>
                     </div>
                     <div class="flip-card-back">
-                        <img src="https://images.unsplash.com/photo-1524492412937-b28074a5d7da?w=500" alt="">
+                        <img src="react-codelab-thumbnail.png" alt="">
                         <p>Eksploro harten e studentëve</p>
                     </div>
                 </div>
@@ -142,25 +127,43 @@
                         <p>Evente • Shetitje • Kurse</p>
                     </div>
                     <div class="flip-card-back">
-                        <img src="https://images.unsplash.com/photo-1506784983877-45594efa4cbe?w=500" alt="">
+                        <img src="ultimate-guide.jpg" alt="">
                         <p>Bëhu pjesë e aktiviteteve</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="flip-card" onclick="goToPage">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <h3>Te tjera</h3>
+                        <p></p>
+                    </div>
+                    <div class="flip-card-back">
+                        <img src="why-college-is-important-1280x617.png" alt="">
+                        <p>Agenda javore</p>
                     </div>
                 </div>
             </div>
 
         </div>
     </main>
-
-    
-
-
-
     <!-- Footer -->
    <footer>
 <p>&copy; 2025 Studenti-ks — All rights reserved</p>
 </footer>
 
     <!-- Scripts -->
-    <script src="script.js"></script>
+    <script src="script.js">
+ function goToPage(){
+            window.location.href="fakultetet.html";
+        }
+
+    </script>
+
+    <script>
+       
+    </script>
 </body>
 </html>
