--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
  <nav>
   <div class="nav-container">
 
-    <div class="logo">RoomieFind</div>
+   <img class="logo" src="StudentikslogoPabg.png" alt="">
 
     <!-- Desktop nav -->
     <div class="nav-links">
