--- a/register.html
+++ b/register.html
@@ -10,46 +10,48 @@
 <body class="light">
   <!-- Navbar -->
   <nav>
-   <div class="nav-container">
-        <img class="logo" src="StudentikslogoPabg.png" alt="">
-        
+  <div class="nav-container">
 
-        <!-- Desktop nav -->
-        <div class="nav-links">
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="contact.html">Contact Us</a>
-            <a href="colleges.html">Fakultetet</a>
-        </div>
+    <img class="logo" src="StudentikslogoPabg.png" alt="">
 
-        <div class="auth-buttons">
-            <button id="login-btn" class="login-btn">Login</button>
-            <button id="register-btn" class="register-btn">Register</button>
-            <button id="themeToggle">Dark Mode</button>
-        </div>
-
-        <!-- Hamburger -->
-        <button id="hamburger" class="hamburger" aria-label="Toggle menu">
-            <span></span>
-            <span></span>
-            <span></span>
-        </button>
+    <!-- Desktop nav -->
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="about.html">About Us</a>
+      <a href="contact.html">Contact Us</a>
+      <a href="colleges.html">Colleges</a>
     </div>
 
-    <!-- Mobile menu -->
-    <div id="mobileMenu" class="mobile-menu">
-        <div class="mobile-menu-links">
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="contact.html">Contact Us</a>
-            <a href="colleges.html">Fakultetet</a>
-        </div>
-
-        <div class="mobile-auth-buttons">
-            <button id="mobile-login-btn">Login</button>
-            <button id="mobile-register-btn">Register</button>
-        </div>
+    <div class="auth-buttons">
+      <button id="loginBtn">Login</button>
+      <button  id="register-btn">Register</button>
+      <button id="themeToggle">Dark Mode</button>
     </div>
+
+    <!-- THE ONLY hamburger button -->
+    <button class="hamburger" id="hamburgerBtn" aria-label="Toggle menu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+
+  </div>
+</nav>
+
+<!-- Mobile menu -->
+<div class="mobile-menu" id="mobileMenu">
+  <div class="mobile-menu-links">
+    <a href="index.html">Home</a>
+    <a href="about.html">About Us</a>
+    <a href="contact.html">Contact Us</a>
+    <a href="colleges.html">Colleges</a>
+  </div>
+
+   <div class="mobile-auth-buttons">
+    <button id="loginBtnMobile">Login</button>
+    <button id="registerBtnMobile">Register</button>
+  </div>
+</div>
 
   <main>
     <section>
