--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="light">
     <div class="nav-container">
-        <img class="logo" src="StudentikslogoPabg.png" alt="">
+        <img class="logo" src="fotot/LogoStudentiks_pabg.png" alt="">
         
 
         <!-- Desktop nav -->
@@ -24,7 +24,14 @@
         <div class="auth-buttons">
             <button id="login-btn" class="login-btn">Login</button>
             <button id="register-btn" class="register-btn">Register</button>
-            <button id="themeToggle">Dark Mode</button>
+  
+            <label class="switch">
+    <input type="checkbox" id="themeToggle">
+    <span class="slider"></span>
+</label>
+
+
+
         </div>
 
         <!-- Hamburger -->
@@ -72,7 +79,7 @@
                         <p>Ketu do gjeni info per cdo fakultet ne Kosove</p>
                     </div>
                     <div class="flip-card-back">
-                        <img src="College.jpg" alt="">
+                        <img src="fotot/College.jpg" alt="">
                         <p>Kliko për më shumë informata</p>
                     </div>
                 </div>
@@ -85,7 +92,7 @@
                         <h3>Materialet</h3>
                     </div>
                     <div class="flip-card-back">
-                        <img src="Books.avif" alt="">
+                        <img src="fotot/Books.avif" alt="">
                         <p>Materialet si PDF, do ti gjeni ketu</p>
                     </div>
                 </div>
@@ -99,7 +106,7 @@
                         <p>Banesa, Konvikte dhe Shtepi</p>
                     </div>
                     <div class="flip-card-back">
-                        <img src="The-4-Rules-of-Sharing-a-Student-Apartment.jpg" alt="">
+                        <img src="fotot/The-4-Rules-of-Sharing-a-Student-Apartment.jpg" alt="">
                         <p>Gjithçka që duhet të dish</p>
                     </div>
                 </div>
@@ -113,7 +120,7 @@
                         <p>Lokacionet më të rëndësishme</p>
                     </div>
                     <div class="flip-card-back">
-                        <img src="react-codelab-thumbnail.png" alt="">
+                        <img src="fotot/react-codelab-thumbnail.png" alt="">
                         <p>Eksploro harten e studentëve</p>
                     </div>
                 </div>
@@ -127,7 +134,7 @@
                         <p>Evente • Shetitje • Kurse</p>
                     </div>
                     <div class="flip-card-back">
-                        <img src="ultimate-guide.jpg" alt="">
+                        <img src="fotot/ultimate-guide.jpg" alt="">
                         <p>Bëhu pjesë e aktiviteteve</p>
                     </div>
                 </div>
@@ -141,7 +148,7 @@
                         <p></p>
                     </div>
                     <div class="flip-card-back">
-                        <img src="why-college-is-important-1280x617.png" alt="">
+                        <img src="fotot/why-college-is-important-1280x617.png" alt="">
                         <p>Agenda javore</p>
                     </div>
                 </div>
