--- a/about.html
+++ b/about.html
@@ -3,107 +3,146 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About Us – RoomieFind</title>
+  <title>Your Page Title</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="about.css" href="colleges.css" />
+  <link rel="stylesheet" href="about.css" />
 </head>
 <body class="light">
-  <button class="hamburger" id="hamburgerBtn" aria-label="Toggle Menu">
-  <span></span>
-  <span></span>
-  <span></span>
-</button>
-  <!-- Navbar -->
-  <nav>
+  <!-- Navbar Container -->
   <div class="nav-container">
-
-    <div class="logo">RoomieFind</div>
-
-    <!-- Desktop nav -->
+    <!-- Logo -->
+    <img class="logo" src="fotot/LogoStudentiks_pabg.png" alt="Logo">
+    
+    <!-- Desktop Navigation Links -->
     <div class="nav-links">
       <a href="index.html">Home</a>
       <a href="about.html">About Us</a>
       <a href="contact.html">Contact Us</a>
-      <a href="colleges.html">Colleges</a>
+      <a href="colleges.html">Fakultetet</a>
     </div>
 
+    <!-- Auth Buttons and Theme Toggle -->
     <div class="auth-buttons">
-      <button href="login.html" id="loginBtn">Login</button>
-      <button href="register.html" id="register-btn">Register</button>
-      <button id="themeToggle">Dark Mode</button>
+      <button id="login-btn" class="login-btn">Login</button>
+      <button id="register-btn" class="register-btn">Register</button>
+
+      <!-- Theme Toggle Switch -->
+      <label class="switch">
+        <input type="checkbox" id="themeToggle">
+        <span class="slider"></span>
+      </label>
+      
+      <!-- Hamburger Menu Button (Mobile Only) -->
+      <button id="hamburger" class="hamburger" aria-label="Toggle menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+    </div>
+  </div>
+
+  <!-- Mobile Menu Overlay -->
+  <div id="mobileMenu" class="mobile-menu">
+    <div class="mobile-menu-links">
+      <a href="index.html">Home</a>
+      <a href="about.html">About Us</a>
+      <a href="contact.html">Contact Us</a>
+      <a href="colleges.html">Fakultetet</a>
     </div>
 
-    <!-- Hamburger (only ONE!) -->
-    <button class="hamburger" id="hamburgerBtn" aria-label="Toggle menu">
-      <span></span>
-      <span></span>
-      <span></span>
-    </button>
-
-  </div>
-</nav>
-
-<!-- Mobile menu -->
-<div class="mobile-menu" id="mobileMenu">
-  <div class="mobile-menu-links">
-    <a href="index.html">Home</a>
-    <a href="about.html">About Us</a>
-    <a href="contact.html">Contact Us</a>
-    <a href="colleges.html">Colleges</a>
+    <div class="mobile-auth-buttons">
+      <button id="mobile-login-btn">Login</button>
+      <button id="mobile-register-btn">Register</button>
+    </div>
   </div>
 
-<<<<<<< Updated upstream
-   <div class="mobile-auth-buttons">
-    <button id="loginBtnMobile">Login</button>
-    <button id="registerBtnMobile">Register</button>
-  </div>
-=======
-  <div class="mobile-auth-buttons">
-<a href="login.html" class="login-mobile">Login</a>
-<a href="register.html" class="register-mobile">Register</a>
-</div>
->>>>>>> Stashed changes
-</div>
-
-
-  <!-- Main Content (grows to push footer down) -->
+  <!-- Your main content here -->
   <main>
-    <section class="about-section">
-      <h1>About RoomieFind</h1>
-      <p>
-        You just became a Student and don't know where to stay in prishtina ? <strong>RoomieFind</strong> is the place to go.<br><br>
-        with <strong>RoomieFind</strong> you can find roommates that fit your liking choice and style.
-      </p>
-      <p style="margin-top: 2rem; font-size: 1.1rem; opacity: 0.9;">
-        You want a Quiet place to study good ambient with positive surroundings — we’ve got you covered.
-      </p>
+    <section>
+      <h1>Your Page Title</h1>
+      <!-- Your content goes here -->
     </section>
   </main>
 
-  <!-- Footer – Always at the bottom -->
+  <!-- Footer -->
   <footer>
-    <div class="footer-content">
-      © 2025 RoomieFind – Thinking for the future
-    </div>
+    © 2025 Your Website Name – All rights reserved
   </footer>
 
-  <!-- Theme Toggle Script -->
+  <!-- JavaScript -->
   <script>
-    function toggleTheme() {
-      document.body.classList.toggle("dark");
-      document.body.classList.toggle("light");
-      const isDark = document.body.classList.contains("dark");
-      document.getElementById("themeToggle").textContent = isDark ? "Light Mode" : "Dark Mode";
-      localStorage.setItem("theme", isDark ? "dark" : "light");
-    }
+    // Theme Toggle Functionality
+    const themeToggle = document.getElementById('themeToggle');
+    const body = document.body;
 
-    // Load saved theme on page load
-    if (localStorage.getItem("theme") === "dark") {
-      document.body.classList.add("dark");
-      document.body.classList.remove("light");
-      document.getElementById("themeToggle").textContent = "Light Mode";
-    }
+    // Check saved theme or default to light
+    const savedTheme = localStorage.getItem('theme') || 'light';
+    body.classList.add(savedTheme);
+    themeToggle.checked = savedTheme === 'dark';
+
+    themeToggle.addEventListener('change', () => {
+      if (themeToggle.checked) {
+        body.classList.remove('light');
+        body.classList.add('dark');
+        localStorage.setItem('theme', 'dark');
+      } else {
+        body.classList.remove('dark');
+        body.classList.add('light');
+        localStorage.setItem('theme', 'light');
+      }
+    });
+
+    // Mobile Menu Toggle
+    const hamburger = document.getElementById('hamburger');
+    const mobileMenu = document.getElementById('mobileMenu');
+
+    hamburger.addEventListener('click', () => {
+      hamburger.classList.toggle('active');
+      mobileMenu.classList.toggle('active');
+    });
+
+    // Close mobile menu when clicking outside
+    document.addEventListener('click', (event) => {
+      if (!mobileMenu.contains(event.target) && !hamburger.contains(event.target)) {
+        hamburger.classList.remove('active');
+        mobileMenu.classList.remove('active');
+      }
+    });
+
+    // Close mobile menu when clicking links
+    document.querySelectorAll('.mobile-menu-links a, .mobile-auth-buttons button').forEach(link => {
+      link.addEventListener('click', () => {
+        hamburger.classList.remove('active');
+        mobileMenu.classList.remove('active');
+      });
+    });
+
+    // Set active nav link
+    const currentPage = window.location.pathname.split('/').pop();
+    const navLinks = document.querySelectorAll('.nav-links a, .mobile-menu-links a');
+    navLinks.forEach(link => {
+      if (link.getAttribute('href') === currentPage) {
+        link.style.color = '#667eea';
+        link.style.fontWeight = '600';
+      }
+    });
+
+    // Login and Register button functionality
+    document.getElementById('login-btn').addEventListener('click', () => {
+      window.location.href = 'login.html';
+    });
+
+    document.getElementById('register-btn').addEventListener('click', () => {
+      window.location.href = 'register.html';
+    });
+
+    document.getElementById('mobile-login-btn').addEventListener('click', () => {
+      window.location.href = 'login.html';
+    });
+
+    document.getElementById('mobile-register-btn').addEventListener('click', () => {
+      window.location.href = 'register.html';
+    });
   </script>
-  <script src="script.js"></script>
 </body>
 </html>
