--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
         </div>
 
         <div class="auth-buttons">
-            <button id="login-btn" class="login-btn">Login</button>
-            <button id="register-btn" class="register-btn">Register</button>
+            <button id="login-btn" class="login-btn" ><a href="login.html">Login</button></a>
+            <button id="register-btn" class="register-btn" ><a href="register.html">Register</button></a>    
   
             <label class="switch">
     <input type="checkbox" id="themeToggle">
     <span class="slider"></span>
 </label>
+
+
 
 
 
