--- a/contact.html
+++ b/contact.html
@@ -10,47 +10,21 @@
 <body class="light">
 <nav>
   <div class="nav-container">
+    <!-- Logo text like the second image -->
+    <a href="/" class="logo">Studentiks</a>
 
-    <div class="logo">RoomieFind</div>
-
-    <!-- Desktop nav -->
+    <!-- Navigation Links like the second image -->
     <div class="nav-links">
       <a href="index.html">Home</a>
-      <a href="about.html">About Us</a>
-      <a href="contact.html">Contact Us</a>
-      <a href="colleges.html">Colleges</a>
+      <a href="about.html">AboutUs</a>
+      <a href="contact.html">ContactUs</a>
+      <a href="colleges.html">—Fakultetet</a>
     </div>
 
-    <div class="auth-buttons">
-      <button href="login.html" id="loginBtn">Login</button>
-      <button href="register.html" id="register-btn">Register</button>
-      <button id="themeToggle">Dark Mode</button>
-    </div>
-
-    <button class="hamburger" id="hamburgerBtn" aria-label="Toggle menu">
-      <span></span>
-      <span></span>
-      <span></span>
-    </button>
-
+    <!-- Create Account button like the first image -->
+    <a href="#register" class="create-account-btn">Create Your Account</a>
   </div>
 </nav>
-
-<!-- Mobile menu -->
-<div class="mobile-menu" id="mobileMenu">
-  <div class="mobile-menu-links">
-    <a href="index.html">Home</a>
-    <a href="about.html">About Us</a>
-    <a href="contact.html">Contact Us</a>
-    <a href="colleges.html">Colleges</a>
-  </div>
-
-   <div class="mobile-auth-buttons">
-    <button id="loginBtnMobile">Login</button>
-    <button id="registerBtnMobile">Register</button>
-  </div>
-</div>
-
 
 
   <section>
