--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fakultetist - Create Account</title>
+    <title>StudentiKs- Create Account</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="register.css">
 </head>
@@ -15,10 +15,10 @@
         
         <!-- Desktop Navigation Links -->
         <div class="nav-links">
-            <a href="#home">Home</a>
-            <a href="#about">About Us</a>
-            <a href="#contact">Contact Us</a>
-            <a href="#fakultetist" style="font-weight: 700; color: #667eea;">Fakultetist</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="contact.html">Contact Us</a>
+            <a href="colleges.html">Fakultetet</a>
         </div>
         
         <!-- Desktop Auth Buttons -->
