--- a/colleges.html
+++ b/colleges.html
@@ -11,7 +11,7 @@
     <!-- NAVBAR -->
     <nav class="nav-container">
 
-        <img src="fotot/LogoStudentiks_pabg.png" alt="Fakultetist Logo" class="logo">
+        <img src="LogoStudentiks_pabg.png" alt="Fakultetist Logo" class="logo">
         
         <!-- Desktop Navigation Links -->
         <div class="nav-links">
@@ -59,7 +59,7 @@
   <div class="colleges-container">
     <!-- University of Pristina -->
     <div class="college-card">
-      <img src="fotot/University of Pristina.jpg" alt="University of Pristina">
+      <img src="University of Pristina.jpg" alt="University of Pristina">
       <div class="college-info">
         <h3>University of Pristina</h3>
         <p>The largest and oldest public university in Kosovo, offering a wide range of programs.</p>
@@ -67,7 +67,7 @@
     </div>
     <!-- University of Mitrovica -->
     <div class="college-card">
-      <img src="fotot/University of Mitrovica.jpg" alt="University of Mitrovica">
+      <img src="University of Mitrovica.jpg" alt="University of Mitrovica">
       <div class="college-info">
         <h3>University of Mitrovica</h3>
         <p>Public university in Mitrovica focusing on engineering and applied sciences.</p>
@@ -75,7 +75,7 @@
     </div>
     <!-- University of Gjilan “Kadri Zeka” -->
     <div class="college-card">
-      <img src="fotot/University of Gjilan “Kadri Zeka”.jpg" alt="University of Gjilan">
+      <img src="University of Gjilan “Kadri Zeka”.jpg" alt="University of Gjilan">
       <div class="college-info">
         <h3>University of Gjilan “Kadri Zeka”</h3>
         <p>A public university in Gjilan with a range of academic programs.:contentReference[oaicite:0]{index=0}</p>
@@ -83,7 +83,7 @@
     </div>
     <!-- Haxhi Zeka University -->
     <div class="college-card">
-      <img src="fotot/Haxhi Zeka University.webp" alt="Haxhi Zeka University">
+      <img src="Haxhi Zeka University.webp" alt="Haxhi Zeka University">
       <div class="college-info">
         <h3>Haxhi Zeka University</h3>
         <p>Public university in Peja (Pejë).:contentReference[oaicite:1]{index=1}</p>
@@ -91,7 +91,7 @@
     </div>
     <!-- University of Applied Sciences in Ferizaj -->
     <div class="college-card">
-      <img src="fotot/University of Applied Sciences in Ferizaj.jpg" alt="Applied Sciences in Ferizaj">
+      <img src="University of Applied Sciences in Ferizaj.jpg" alt="Applied Sciences in Ferizaj">
       <div class="college-info">
         <h3>University of Applied Sciences in Ferizaj</h3>
         <p>Public institution focused on applied sciences and technical fields.:contentReference[oaicite:2]{index=2}</p>
@@ -99,7 +99,7 @@
     </div>
     <!-- IBCM – International Business College Mitrovica -->
     <div class="college-card">
-      <img src="fotot/International Business College Mitrovica.jpg" alt="IBC‑M College">
+      <img src="International Business College Mitrovica.jpg" alt="IBC‑M College">
       <div class="college-info">
         <h3>International Business College Mitrovica</h3>
         <p>International business college known for collaborative programs.:contentReference[oaicite:3]{index=3}</p>
@@ -107,7 +107,7 @@
     </div>
     <!-- AAB College -->
     <div class="college-card">
-      <img src="fotot/AAB.jpg" alt="AAB College">
+      <img src="AAB.jpg" alt="AAB College">
       <div class="college-info">
         <h3>AAB College</h3>
         <p>One of the leading private higher education institutions in Kosovo.:contentReference[oaicite:4]{index=4}</p>
@@ -123,7 +123,7 @@
     </div>
     <!-- RIT Kosovo -->
     <div class="college-card">
-      <img src="fotot/RIT Kosovo.jpg" alt="RIT Kosovo">
+      <img src="RIT Kosovo.jpg" alt="RIT Kosovo">
       <div class="college-info">
         <h3>RIT Kosovo</h3>
         <p>Offers American‑accredited programs in technology and business.:contentReference[oaicite:6]{index=6}</p>
@@ -131,7 +131,7 @@
     </div>
     <!-- European College Dukagjini -->
     <div class="college-card">
-      <img src="fotot/European College Dukagjini.jpg" alt="European College Dukagjini">
+      <img src="European College Dukagjini.jpg" alt="European College Dukagjini">
       <div class="college-info">
         <h3>European College Dukagjini</h3>
         <p>Private college in Kosovo offering business and social science programs.</p>
@@ -147,7 +147,7 @@
     </div>
     <!-- Universum College -->
     <div class="college-card">
-      <img src="fotot/Universum College.jpg" alt="Universum College">
+      <img src="Universum College.jpg" alt="Universum College">
       <div class="college-info">
         <h3>Universum College</h3>
         <p>Private college offering business, IT, and modern programs.</p>
