--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <!-- NAVBAR -->
     <nav class="nav-container">
 
-        <img src="fotot/LogoStudentiks_pabg.png" alt="Fakultetist Logo" class="logo">
+        <img src="LogoStudentiks_pabg.png" alt="Fakultetist Logo" class="logo">
         
         <!-- Desktop Navigation Links -->
         <div class="nav-links">
