--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- NAVBAR -->
     <nav class="nav-container">
 
-        <img src="fotot/LogoStudentiks_pabg.png" alt="Fakultetist Logo" class="logo">
+        <img src="LogoStudentiks_pabg.png" alt="Fakultetist Logo" class="logo">
         
         <!-- Desktop Navigation Links -->
         <div class="nav-links">
@@ -72,7 +72,7 @@
                         <p>Find affordable and comfortable housing near your campus</p>
                     </div>
                     <div class="flip-card-back">
-                        <img src="images/housing.jpg" alt="Student Housing">
+                        <img src="housing.jpg" alt="Student Housing">
                         <p>Modern apartments and dormitories</p>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
                         <p>Connect with compatible roommates based on your preferences</p>
                     </div>
                     <div class="flip-card-back">
-                        <img src="images/roommates.jpg" alt="Roommate Matching">
+                        <img src="roommates.jpg" alt="Roommate Matching">
                         <p>Smart matching algorithm</p>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                         <p>Access housing options across all major universities</p>
                     </div>
                     <div class="flip-card-back">
-                        <img src="images/universities.jpg" alt="University Network">
+                        <img src="Image3.jpg" alt="University Network">
                         <p>All universities in Kosovo covered</p>
                     </div>
                 </div>
