--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <!-- NAVBAR -->
     <nav class="nav-container">
         <!-- Logo -->
-        <img src="fotot/LogoStudentiks_pabg.png" alt="Fakultetist Logo" class="logo">
+        <img src="LogoStudentiks_pabg.png" alt="Fakultetist Logo" class="logo">
         
         <!-- Desktop Navigation Links -->
         <div class="nav-links">
