--- a/colleges.html
+++ b/colleges.html
@@ -79,7 +79,7 @@
       <img src="University of Gjilan “Kadri Zeka”.jpg" alt="University of Gjilan">
       <div class="college-info">
         <h3>University of Gjilan “Kadri Zeka”</h3>
-        <p>A public university in Gjilan with a range of academic programs.:contentReference[oaicite:0]{index=0}</p>
+        <p>A public university in Gjilan with a range of academic programs.</p>
       </div>
     </div>
     <!-- Haxhi Zeka University -->
@@ -87,7 +87,7 @@
       <img src="Haxhi Zeka University.webp" alt="Haxhi Zeka University">
       <div class="college-info">
         <h3>Haxhi Zeka University</h3>
-        <p>Public university in Peja (Pejë).:contentReference[oaicite:1]{index=1}</p>
+        <p>Public university in Peja (Pejë).</p>
       </div>
     </div>
     <!-- University of Applied Sciences in Ferizaj -->
@@ -95,7 +95,7 @@
       <img src="University of Applied Sciences in Ferizaj.jpg" alt="Applied Sciences in Ferizaj">
       <div class="college-info">
         <h3>University of Applied Sciences in Ferizaj</h3>
-        <p>Public institution focused on applied sciences and technical fields.:contentReference[oaicite:2]{index=2}</p>
+        <p>Public institution focused on applied sciences and technical fields.</p>
       </div>
     </div>
     <!-- IBCM – International Business College Mitrovica -->
@@ -103,7 +103,7 @@
       <img src="International Business College Mitrovica.jpg" alt="IBC‑M College">
       <div class="college-info">
         <h3>International Business College Mitrovica</h3>
-        <p>International business college known for collaborative programs.:contentReference[oaicite:3]{index=3}</p>
+        <p>International business college known for collaborative programs.</p>
       </div>
     </div>
     <!-- AAB College -->
@@ -111,15 +111,15 @@
       <img src="AAB.jpg" alt="AAB College">
       <div class="college-info">
         <h3>AAB College</h3>
-        <p>One of the leading private higher education institutions in Kosovo.:contentReference[oaicite:4]{index=4}</p>
+        <p>One of the leading private higher education institutions in Kosovo.</p>
       </div>
     </div>
     <!-- UBT – University for Business and Technology -->
     <div class="college-card">
-      <img src="fotot/UBT7784-e1564990441516.jpg" alt="UBT College">
+      <img src="UBT7784-e1564990441516.jpg" alt="UBT College">
       <div class="college-info">
         <h3>UBT – University for Business and Technology</h3>
-        <p>Internation‑oriented higher education institution with modern campuses.:contentReference[oaicite:5]{index=5}</p>
+        <p>Internation‑oriented higher education institution with modern campuses.</p>
       </div>
     </div>
     <!-- RIT Kosovo -->
@@ -127,7 +127,7 @@
       <img src="RIT Kosovo.jpg" alt="RIT Kosovo">
       <div class="college-info">
         <h3>RIT Kosovo</h3>
-        <p>Offers American‑accredited programs in technology and business.:contentReference[oaicite:6]{index=6}</p>
+        <p>Offers American‑accredited programs in technology and business.</p>
       </div>
     </div>
     <!-- European College Dukagjini -->
@@ -140,10 +140,10 @@
     </div>
     <!-- Iliria College -->
     <div class="college-card">
-      <img src="fotot/iliria-college-kosovo.jpg" alt="Iliria College">
+      <img src="iliria-college-kosovo.jpg" alt="Iliria College">
       <div class="college-info">
         <h3>Iliria College</h3>
-        <p>Private higher education institution based in Prishtina.:contentReference[oaicite:7]{index=7}</p>
+        <p>Private higher education institution based in Prishtina.</p>
       </div>
     </div>
     <!-- Universum College -->
