Rregullmi i navbarit dhe hamburger   menu

--- a/register.html
+++ b/register.html
@@ -58,8 +58,8 @@
     <!-- ==================== MAIN CONTENT ==================== -->
     <main>
         <section>
-            <h1>Create Your Account</h1>
-            <p>Join students across Kosovo who are finding the perfect homes and compatible roommates.</p>
+            <h1 class="title">Create Your Account</h1>
+            <p class="title" >Join students across Kosovo who are finding the perfect homes and compatible roommates.</p>
             
             <div class="form-container">
                 <form id="signup-form">
