--- a/about.html
+++ b/about.html
@@ -4,13 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Studenti-Ks - Rreth Nesh</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="about.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 <body class="light">
   <!-- NAVBAR -->
     <nav class="nav-container">
 
-        <img src="LogoStudentiks_pabg.png" alt="Fakultetist Logo" class="logo">
+        <img src="LogoStudentiks_pabg.png" alt=Logo" class="logo">
         
         <!-- Desktop Navigation Links -->
         <div class="nav-links">
