--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
   <title>Studenti-Ks - Kontakti</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="contact.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 <body class="light">
   <!-- NAVBAR -->
