--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Studenti-Ks - Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 <body class="light">
       <!-- NAVBAR -->
@@ -15,7 +16,7 @@
         
         <!-- Desktop Navigation Links -->
         <div class="nav-links">
-            <a href="index.html">Home</a>
+            <a href="index.html">Home </a>
             <a href="about.html">Rreth Nesh</a>
             <a href="contact.html">Kontakti</a>
             <a href="colleges.html">Fakultetet</a>
